# avcpp

./: .gitignore  .travis.yml  .travis.yml.in  CMakeLists.txt  Doxyfile.in  README.md  build.sh  conanfile.py  conanfile.py.in
av/: CMakeLists.txt  _iocontext.cpp  av.h  averrc.cpp  averrc.h  codec.cpp  codec.h  constant.cpp  constant.h  cuesheet.cpp  cuesheet.h  dynamicrange.cpp  dynamicrange.h  format.cpp  format.h  frame.cpp  frame.h  metadata.cpp  metadata.h  option.cpp  option.h  packet.cpp  packet.h  resample.cpp  resample.h  scale.cpp  scale.h  utils.cpp  utils.h
av/discid/: base64.cpp  base64.h  cddb.cpp  cddb.h  discid.cpp  discid.h  musicbrainz.cpp  musicbrainz.h  sha1.cpp  sha1.h  toc.cpp  toc.h
docs/: __iocontext_8cpp.html  __iocontext_8cpp__incl.map  __iocontext_8cpp__incl.md5  __iocontext_8h.html  __iocontext_8h__dep__incl.map  __iocontext_8h__dep__incl.md5  __iocontext_8h__incl.map  __iocontext_8h__incl.md5  __iocontext_8h_source.html  annotated.html  av_8h.html  av_8h__incl.map  av_8h__incl.md5  av_8h_source.html  averrc_8cpp.html  averrc_8cpp__incl.map  averrc_8cpp__incl.md5  averrc_8h.html  averrc_8h__dep__incl.map  averrc_8h__dep__incl.md5  averrc_8h__incl.map  averrc_8h__incl.md5  averrc_8h_source.html  base64_8h.html  base64_8h__dep__incl.map  base64_8h__dep__incl.md5  base64_8h_source.html  cddb_8h.html  cddb_8h__incl.map  cddb_8h__incl.md5  cddb_8h_source.html  classav_1_1_channel_layout-members.html  classav_1_1_channel_layout.html  classav_1_1_codec-members.html  classav_1_1_codec.html  classav_1_1_codec_a02c52369be582abd265d48f4e0e4cc2f_cgraph.map  classav_1_1_codec_a02c52369be582abd265d48f4e0e4cc2f_cgraph.md5  classav_1_1_codec_a0d8a7d46f6b0b9181454bffb3230fde5_cgraph.map  classav_1_1_codec_a0d8a7d46f6b0b9181454bffb3230fde5_cgraph.md5  classav_1_1_codec_a65a2d57a68f6038294b55fdddae385a1_cgraph.map  (+415 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+98 more)
samples/: CMakeLists.txt  decode.cpp  decode_audio.cpp  discinfo.cpp  dr_range.cpp  encode.cpp  encode_audio.cpp  metadata.cpp  play.cpp  play_ao.cpp  play_sdl2.cpp  resample.cpp  scaling_video.cpp  transcode_aac.cpp
test/: CMakeLists.txt  cddbtest.cpp  codectest.cpp  cuetsheet_test.cpp  decodetest.cpp  discidtest.cpp  encodetest.cpp  faithless_live_in_berlin.cue.h  formattest.cpp  marc_edwards_weasel_walter_group_solar_emission.h  metadatatest.cpp  musicbrainztest.cpp  optionstest.cpp  radioaxiom_log.h  resampletest.cpp  scaling_video_test.cpp  solid_ether.h  streamtest.cpp  toctest.cpp  utilstest.cpp
